--- a/front/src/app/login/components/login-form/login-form.component.html
+++ b/front/src/app/login/components/login-form/login-form.component.html
@@ -1,1 +1,18 @@
-<p>login-form works!</p>
+
+
+<mat-card>
+    <h2>Ingrese a su cuenta</h2>
+    <mat-form-field appearance="outline">
+        <mat-label>Usuario</mat-label>
+        <input matInput>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'">
+        <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+    </mat-form-field>
+    <app-btn-primary [buttonText]="'Iniciar sesión'"></app-btn-primary>
+    <app-btn-secondary [buttonText]="'¿Olvidaste tu contraseña?'"></app-btn-secondary>
+</mat-card>
