Componente Seleccionar Práctica/Estudio

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,9 @@
 
 <main class="main">
-  <app-login-form></app-login-form>
+<app-login-form></app-login-form>
+<app-menu-turnos></app-menu-turnos>
+<app-seleccionar-practica></app-seleccionar-practica>
+<app-seleccionar-estudio></app-seleccionar-estudio>
 </main>
 
 <router-outlet />
