--- a/front/src/app/login/components/login-form/login-form.component.html
+++ b/front/src/app/login/components/login-form/login-form.component.html
@@ -1,6 +1,7 @@
 
 
 <mat-card>
+    <img src="../../../../assets/img/logoClinica.png" alt="logo de la clínica SePrice">
     <h2>Ingrese a su cuenta</h2>
     <mat-form-field appearance="outline">
         <mat-label>Usuario</mat-label>
