--- a/front/src/app/login/components/login-form/login-form.component.css
+++ b/front/src/app/login/components/login-form/login-form.component.css
@@ -4,16 +4,15 @@ mat-card{
     text-align: center;
     display: flex;
     align-items: center;
+    background-color: var(--background);
 }
 
 mat-form-field{
     width: 100%;
 }
 
-.mdc-text-field--outlined:not(.mdc-text-field--disabled) .mdc-text-field__input {
-    caret-color: var(--accent);
-}
-
-app-btn-primary{
+app-btn-primary, app-btn-secondary{
     width: 360px;
+    height: 50px;
+    padding: 5px;
 }
