--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -4,6 +4,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
 :root{
-    --font: #004D40;
+    --primary: #004D40;
     --accent: #008075;
+    --background: #F4FBF8;
 }
