--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,9 +1,7 @@
-
-<main class="main">
-<app-login-form></app-login-form>
+<!-- <app-login-form></app-login-form>
 <app-menu-turnos></app-menu-turnos>
 <app-seleccionar-practica></app-seleccionar-practica>
-<app-seleccionar-estudio></app-seleccionar-estudio>
-</main>
-
-<router-outlet />
+<app-seleccionar-estudio></app-seleccionar-estudio> -->
+<app-toolbar></app-toolbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
