--- a/front/src/app/login/components/login-form/login-form.component.html
+++ b/front/src/app/login/components/login-form/login-form.component.html
@@ -14,6 +14,6 @@
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
     </mat-form-field>
-    <app-btn-primary [buttonText]="'Iniciar sesión'"></app-btn-primary>
+    <app-btn-primary (click)="navegarAInicio()" [buttonText]="'Iniciar sesión'"></app-btn-primary>
     <app-btn-secondary [buttonText]="'¿Olvidaste tu contraseña?'"></app-btn-secondary>
 </mat-card>
