--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -2,6 +2,8 @@
 <app-menu-turnos></app-menu-turnos>
 <app-seleccionar-practica></app-seleccionar-practica>
 <app-seleccionar-estudio></app-seleccionar-estudio> -->
+<!-- <app-main-layout></app-main-layout> -->
 <app-toolbar></app-toolbar>
 <router-outlet></router-outlet>
+<!-- <app-main-layout></app-main-layout> -->
 <app-footer></app-footer>
