--- a/front/src/app/admin/components/seleccion-sector/seleccion-sector.component.html
+++ b/front/src/app/admin/components/seleccion-sector/seleccion-sector.component.html
@@ -2,5 +2,5 @@
 <p>Seleccione un sector:</p>
 <div class="btnContainer">
     <app-btn-primary [buttonText]="'CONSULTORIOS EXTERNOS'"></app-btn-primary>
-    <app-btn-primary [buttonText]="'ESTUDIOS CLÍNICOS'"></app-btn-primary>
+    <app-btn-primary (click)="navegarAEstudiosClinicos()" [buttonText]="'ESTUDIOS CLÍNICOS'"></app-btn-primary>
 </div>
