--- a/front/src/app/login/components/login-form/login-form.component.css
+++ b/front/src/app/login/components/login-form/login-form.component.css
@@ -5,6 +5,8 @@ mat-card{
     display: flex;
     align-items: center;
     background-color: var(--background);
+    border: none;
+    box-shadow: none
 }
 
 mat-form-field{
@@ -19,4 +21,8 @@ app-btn-primary, app-btn-secondary{
 
 h2{
     padding-bottom: 30px;
+}
+
+img{
+    padding-bottom: 50px;
 }
