Mejoras en routing

--- a/front/src/app/admin/components/estudios-clinicos/seleccionar-estudio/seleccionar-estudio.component.html
+++ b/front/src/app/admin/components/estudios-clinicos/seleccionar-estudio/seleccionar-estudio.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+   <h2>Solicitud de Turno</h2>
     <p>Seleccione una opción:</p>
     <mat-form-field class="custom-width">
         <mat-label>Seleccione tipo de estudio/laboratorio...</mat-label>
