--- a/front/src/app/admin/components/seleccion-sector/seleccion-sector.component.html
+++ b/front/src/app/admin/components/seleccion-sector/seleccion-sector.component.html
@@ -1,6 +1,6 @@
 <h2>¡Le damos la bienvenida!</h2>
 <p>Seleccione un sector:</p>
 <div class="btnContainer">
-    <app-btn-primary [buttonText]="'CONSULTORIOS EXTERNOS'"></app-btn-primary>
+    <app-btn-primary (click)="navegarAConsultoriosExternos()" [buttonText]="'CONSULTORIOS EXTERNOS'"></app-btn-primary>
     <app-btn-primary (click)="navegarAEstudiosClinicos()" [buttonText]="'ESTUDIOS CLÍNICOS'"></app-btn-primary>
 </div>
