--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -6,8 +6,14 @@
     padding: 0;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+
+body { 
+    margin: 0; 
+    font-family: 'Roboto', sans-serif; 
+    height: calc(100vh - 180px); /*no cambiar*/
+}
+
 :root{
     --primary: #004D40;
     --accent: #008075;
