Gestionar Turnos en Consultorios Externos finalizado (sin data binding ni modal para agregar paciente)

--- a/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
+++ b/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <h2 >Solicitud de Turno</h2>
     <p>Seleccione una opción:</p>
     <mat-form-field class="custom-width">
         <mat-label>Seleccione tipo de práctica médica...</mat-label>
@@ -12,18 +13,10 @@
           <mat-error>Por favor, elija una práctica médica para continuar</mat-error>
         }
     </mat-form-field>
-    <mat-form-field class="custom-width">
-        <mat-label>Tiempo mínimo del turno</mat-label>
-        <mat-select [formControl]="tiempoControl" required>
-          <mat-option>--</mat-option>
-          @for (tiempo of tiempos; track tiempo) {
-            <mat-option [value]="tiempo">{{tiempo.value}}</mat-option>
-          }
-        </mat-select>
-        @if (tiempoControl.hasError('required')) {
-          <mat-error>Por favor, elija un tiempo mínimo para el turno</mat-error>
-        }
-    </mat-form-field>
-    <app-btn-primary [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
+    @if (practicaControl.hasError('required')) {
+      <app-btn-inactive [buttonText]="'Ver turnos disponibles'"></app-btn-inactive>
+    } @else {
+      <app-btn-primary (click)="navegarASeleccionarTurno()" [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
+    }
     <app-btn-secondary [buttonText]="'Volver'"></app-btn-secondary>
 </mat-card>
