--- a/front/src/app/shared/components/login/login.component.scss
+++ b/front/src/app/shared/components/login/login.component.scss
@@ -4,6 +4,8 @@ body{
     align-items: center;
     justify-content: center;
     background-color: var(--background);
+    padding: 30px;
+    
 }
 
 mat-card{
