--- a/front/src/app/shared/components/main-layout/main-layout.component.scss
+++ b/front/src/app/shared/components/main-layout/main-layout.component.scss
@@ -1,4 +1,4 @@
-.example-container{
+.container{
     width: auto;
     height: 100%;
     background-color: var(--background);
@@ -36,5 +36,5 @@ a{
     justify-content:flex-start;
     align-items: center;
     height: 100%;
-    gap: 20px;
+    gap: 10px;
 }
