Componentes de Consultorios Externos (Admin) OK

--- a/front/src/app/shared/components/dialog-nuevo-paciente/dialog-nuevo-paciente.component.html
+++ b/front/src/app/shared/components/dialog-nuevo-paciente/dialog-nuevo-paciente.component.html
@@ -69,7 +69,7 @@
           <mat-option value="particular">Particular</mat-option>
         </mat-select>
         @if (obraSocial.hasError('required')) {
-          <mat-error>Por favor, elija una opciónr</mat-error>
+          <mat-error>Por favor, elija una opción</mat-error>
         }
       </mat-form-field>
     <div class="btnContainer">
