--- a/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
+++ b/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
@@ -25,7 +25,7 @@
         Seleccionar 
     </th>
     <mat-radio-group [(ngModel)]="selectedOption">
-        <td mat-cell *matCellDef="let element" class="checkbox">
+        <td mat-cell *matCellDef="let element" class="radioBtn">
           <!-- Ver qué datos se pasan por el radio button o si los turnos tienen un id que llega por el array -->
             <mat-radio-button class="custom-radio" [value]="element.fecha + element.horario">
 
