Implementacion logica login, verifica que las credenciales sean exactamente iguales y no nulas, se aplicó logica para redireccion segunr  el grupo que pertenece el usuario y tambien se implementó logica para cerrar sesion

--- a/front/src/app/shared/components/toolbar/toolbar.component.html
+++ b/front/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
 <mat-toolbar>
     <mat-icon>person</mat-icon>
-    <span>Iniciar sesión</span>
+    <span>{{usuarioLogeado?.username ? usuarioLogeado?.username : "Iniciar sesión"}}</span>
 </mat-toolbar>
