--- a/front/src/app/shared/components/login/login.component.html
+++ b/front/src/app/shared/components/login/login.component.html
@@ -4,11 +4,16 @@
         <h2>Ingrese a su cuenta</h2>
         <mat-form-field appearance="outline">
             <mat-label>Usuario</mat-label>
-            <input matInput>
+            <input matInput
+                  [(ngModel)]="username" 
+                  >
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Contraseña</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'">
+            <input matInput
+                  [(ngModel)]="password" 
+                  [type]="hide ? 'password' : 'text'"
+                  >
             <button mat-icon-button matSuffix (click)="clickEvent($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
