--- a/front/src/app/features/estudios-clinicos/components/dialog-informe-insumos/dialog-informe-insumos.component.html
+++ b/front/src/app/features/estudios-clinicos/components/dialog-informe-insumos/dialog-informe-insumos.component.html
@@ -1,9 +1,9 @@
 <div class="dialogContentContainer">
-    <h2>Insumos Faltantes</h2>
+    <h2>¿Desea solicitar los insumos faltantes?</h2>
 
 <mat-dialog-actions>
-  <app-btn-secondary (click)="emitirReporte()" buttonText="Emitir Reporte"></app-btn-secondary>
-  <app-btn-primary (click)="volverAlInicio()" buttonText="Finalizar"></app-btn-primary>
+  <app-btn-primary (click)="emitirReporte()" buttonText="Sí, y emitir reporte"></app-btn-primary>
+  <app-btn-secondary buttonText="Cancelar"></app-btn-secondary>
 </mat-dialog-actions>
 </div>
 
