--- a/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
+++ b/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
@@ -1,18 +1,24 @@
 <h2>Solicitud de Turno</h2>
-<p>Práctica Médica: Traumatología
+<p>Práctica Médica: {{practicaSeleccionada}}
 </p>
 <p>Seleccione un turno disponible:
 </p>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="listaTurnos" class="mat-elevation-z8">
 
     <ng-container matColumnDef="fecha">
       <th mat-header-cell *matHeaderCellDef> Fecha </th>
       <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="horario">
+    <ng-container matColumnDef="horaInicio">
       <th mat-header-cell *matHeaderCellDef> Horario </th>
-      <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
+      <td mat-cell *matCellDef="let element">
+        @if (element.sobreturno){
+          {{element.horaInicio}} (sobreturno)  
+        } @else {
+          {{element.horaInicio}} 
+        }
+       </td>
     </ng-container>
   
     <ng-container matColumnDef="profesional">
@@ -26,7 +32,6 @@
     </th>
     <mat-radio-group [(ngModel)]="selectedOption">
         <td mat-cell *matCellDef="let element" class="radioBtn">
-          <!-- Ver qué datos se pasan por el radio button o si los turnos tienen un id que llega por el array -->
             <mat-radio-button class="custom-radio" [value]="element.fecha + element.horario">
 
             </mat-radio-button> 
@@ -37,7 +42,7 @@
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  </table> 
 <div class="btnContainer">
     <app-btn-secondary (click)="volver()" buttonText="Volver"></app-btn-secondary>
     @if (!selectedOption) {
@@ -46,3 +51,8 @@
         <app-btn-primary (click)="navegarAIngresarPaciente()" buttonText="Continuar"></app-btn-primary>
     }
 </div>
+
+@for (item of turnosTomados; track $index) {
+  {{item.inicioFechaHora | date : 'dd/MM/yyyy'}}
+  {{item.inicioFechaHora | date : 'hh:mm'}}
+}
