Flujo para nuevo turno de Estudios Clinicos OK

--- a/front/src/app/features/estudios-clinicos/components/seleccionar-estudio/seleccionar-estudio.component.html
+++ b/front/src/app/features/estudios-clinicos/components/seleccionar-estudio/seleccionar-estudio.component.html
@@ -16,7 +16,7 @@
       @if (estudioControl.hasError('required')) {
         <app-btn-inactive [buttonText]="'Ver turnos disponibles'"></app-btn-inactive>
       } @else {
-        <app-btn-primary  [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
+        <app-btn-primary (click)="navegarAOpcionSeleccionada()" [buttonText]="'Ver turnos disponibles'"></app-btn-primary>
       }
     <app-btn-secondary [buttonText]="'Volver'"></app-btn-secondary>
 </mat-card>
