--- a/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
+++ b/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.html
@@ -1,5 +1,5 @@
 <h2>Solicitud de Turno</h2>
-<p>Práctica Médica: {{practicaSeleccionada}}
+<p>Práctica Médica: {{practicaSeleccionada}} {{estudioSeleccionado}}
 </p>
 <p>Seleccione un turno disponible:
 </p>
