--- a/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
+++ b/front/src/app/features/consultorios-externos/components/seleccionar-practica/seleccionar-practica.component.html
@@ -5,7 +5,8 @@
         <mat-label>Seleccione tipo de práctica médica...</mat-label>
         <mat-select [formControl]="practicaControl" required>
           <mat-option>--</mat-option>
-          @for (practica of practicas; track practica) {
+          <!-- @for (practica of practicas; track practica) { -->
+          @for (practica of practicasEnum; track practica) {
             <mat-option [value]="practica">{{practica.name}}</mat-option>
           }
         </mat-select>
