--- a/front/src/app/shared/components/card-datos-turno/card-datos-turno.component.html
+++ b/front/src/app/shared/components/card-datos-turno/card-datos-turno.component.html
@@ -1,11 +1,11 @@
 <div class="card">
     <h2>Turno Encontrado</h2>
     <div class="dataContainer">
-    <h4>DNI: 1111111</h4>
-    <h4>Paciente: María Garcia</h4>
-    <h4>Turno: 27 de mayo 15:00hs</h4>
-    <p>Práctica Médica: Traumatología</p>
-    <p>Profesional: Juan Carlos Pérez</p>
+    <h4>DNI: {{primerTurno.paciente?.dniPaciente}}</h4>
+    <h4>Paciente: {{primerTurno.paciente?.persona?.nombre}}  {{primerTurno.paciente?.persona?.apellido}}</h4>
+    <h4>Turno: {{primerTurno.inicioFechaHora | date:'short'}}</h4>
+    <p>Práctica Médica: {{primerTurno.especialidad}}</p>
+    <p>Profesional: {{primerTurno.profesional?.persona?.nombre}} {{primerTurno.profesional?.persona?.apellido}}</p>
     </div>
     
     <div class="btnContainer">
