--- a/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
+++ b/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
@@ -1,5 +1,5 @@
-<h2>Lista de espera Téc. González, Pedro</h2>
-<h2>Miércoles 22 de mayo</h2>
+<h2>Lista de espera Dr. {{usuarioLogueado?.persona?.nombre}} {{usuarioLogueado?.persona?.apellido}}</h2>
+<h2>{{hoy  | date:'yyyy-MM-dd'   }}</h2>
     
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
@@ -10,7 +10,7 @@
   
     <ng-container matColumnDef="horario">
       <th mat-header-cell *matHeaderCellDef> Horario </th>
-      <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.horario | date:'HH:mm' }} </td>
     </ng-container>
   
     <ng-container matColumnDef="profesional">
