se implementa metodo para buscar profesiona por especialidad,  arreglos en lista de espera ordenada por  turno con fecha ascendente

--- a/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
+++ b/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
@@ -1,5 +1,5 @@
 <h2>Lista de espera Dr. {{usuarioLogueado?.persona?.nombre}} {{usuarioLogueado?.persona?.apellido}}</h2>
-<h2>{{hoy  | date:'yyyy-MM-dd'   }}</h2>
+<h2>{{hoy  | date:'dd-MM-yyyy'   }}</h2>
     
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
