fix llamado a paciente y  day format para obtener turnos del usuario

--- a/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
+++ b/front/src/app/shared/components/lista-espera-prof/lista-espera-prof.component.html
@@ -30,7 +30,9 @@
   @if (currentRoute === '/estudiosClinicos/listaEsperaProf'  || currentRoute === '/consultoriosExternos/listaEsperaProf'){
     @if (!btnInvisible) {
       <div class="btnContainer">
-        <app-btn-primary buttonText="Comenzar llamados" (click)='comenzarLlamados()'></app-btn-primary>
+        <app-btn-primary 
+        buttonText="Comenzar llamados" 
+        (click)='comenzarLlamados()'></app-btn-primary>
       </div>
     }
   }
