--- a/front/src/app/shared/components/llamado-paciente-1/llamado-paciente-1.component.html
+++ b/front/src/app/shared/components/llamado-paciente-1/llamado-paciente-1.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <h2>Siguiente turno</h2>
     <div class="infoContainer">
-        <p>Paciente: María García</p>
-        <p>Horario: 15:00hs</p>
+        <p>Paciente: {{turnoUno?.paciente}}</p>
+        <p>Horario: {{turnoUno?.horario | date:'HH:mm'}}hs</p>
     </div>
  
     <div class="btnContainer">
