--- a/front/src/app/shared/components/llamado-paciente-2/llamado-paciente-2.component.html
+++ b/front/src/app/shared/components/llamado-paciente-2/llamado-paciente-2.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <h2>Siguiente turno</h2>
     <div class="infoContainer">
-        <p>Paciente: María García</p>
-        <p>Horario: 15:00hs</p>
+        <p>Paciente: {{turnoUno?.paciente}}</p>
+        <p>Horario: {{turnoUno?.horario | date:'HH:mm'}}hs</p>
     </div>
  
     <div class="btnContainer">
         @if (!segundoLlamadoRealizado) {
             <app-btn-secondary (click)="realizarSegundoLlamado()" buttonText="Realizar 2do llamado"></app-btn-secondary>
         }@else {
-            <app-btn-secondary buttonText="Eliminar paciente de lista"></app-btn-secondary>
+            <app-btn-secondary (click)="eliminarTurnoDeListaEspera()"  buttonText="Eliminar paciente de lista"></app-btn-secondary>
 
         }
         <app-btn-primary buttonText="Confirmar atención" (click)="confirmarAtencion()" ></app-btn-primary>
