--- a/front/src/app/shared/components/llamado-paciente-1/llamado-paciente-1.component.html
+++ b/front/src/app/shared/components/llamado-paciente-1/llamado-paciente-1.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h2>Siguiente turno</h2>
     <div class="infoContainer">
-        <p>Paciente: {{turnoUno?.paciente}}</p>
+        <p>Paciente: {{turnoUno?.pacienteNombre}}</p>
         <p>Horario: {{turnoUno?.horario | date:'HH:mm'}}hs</p>
     </div>
  
