--- a/front/src/app/shared/components/lista-espera-admin/lista-espera-admin.component.html
+++ b/front/src/app/shared/components/lista-espera-admin/lista-espera-admin.component.html
@@ -2,14 +2,14 @@
 <h2>Lista de espera de pacientes</h2>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="paciente">
+    <ng-container matColumnDef="pacienteNombre">
       <th mat-header-cell *matHeaderCellDef> Paciente </th>
-      <td mat-cell *matCellDef="let element"> {{element.paciente}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.pacienteNombre}} </td>
     </ng-container>
   
     <ng-container matColumnDef="horario">
       <th mat-header-cell *matHeaderCellDef> Horario </th>
-      <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.horario | date:'HH:mm'}} </td>
     </ng-container>
   
     <ng-container matColumnDef="profesional">
