--- a/front/src/app/shared/components/card-datos-turno/card-datos-turno.component.html
+++ b/front/src/app/shared/components/card-datos-turno/card-datos-turno.component.html
@@ -3,7 +3,7 @@
     <div class="dataContainer">
     <h4>DNI: {{primerTurno.paciente?.dniPaciente}}</h4>
     <h4>Paciente: {{primerTurno.paciente?.persona?.nombre}}  {{primerTurno.paciente?.persona?.apellido}}</h4>
-    <h4>Turno: {{primerTurno.inicioFechaHora | date:'short'}}</h4>
+    <h4>Turno: {{primerTurno.inicioFechaHora | date:'dd/MM/yyyy HH:mm'}}</h4>
     <p>Práctica Médica: {{primerTurno.especialidad}}</p>
     <p>Profesional: {{primerTurno.profesional?.persona?.nombre}} {{primerTurno.profesional?.persona?.apellido}}</p>
     </div>
