cambios en sidenav y dialog en finalizar consulta

--- a/front/src/app/shared/components/dialog-guardar-historia/dialog-guardar-historia.component.html
+++ b/front/src/app/shared/components/dialog-guardar-historia/dialog-guardar-historia.component.html
@@ -1,9 +1,9 @@
 <div class="dialogContentContainer">
-    <h2>¿Desea guardar la historia clínica y finalizar la consulta?</h2>
+    <h2>¿Desea guardar la historia clínica?</h2>
 
 <mat-dialog-actions>
   <app-btn-secondary (click)="cancelar()" buttonText="Cancelar"></app-btn-secondary>
-  <app-btn-primary (click)="volverAListaEspera()" buttonText="Guardar y finalizar"></app-btn-primary>
+  <app-btn-primary (click)="guardarHistoriaClinica()" buttonText="Guardar"></app-btn-primary>
 </mat-dialog-actions>
 </div>
 
