--- a/front/src/app/shared/components/dialog-finalizar-consulta/dialog-finalizar-consulta.component.html
+++ b/front/src/app/shared/components/dialog-finalizar-consulta/dialog-finalizar-consulta.component.html
@@ -1,1 +1,9 @@
-<p>dialog-finalizar-consulta works!</p>
+<div class="dialogContentContainer">
+    <h2>Finalizar la consulta</h2>
+
+<mat-dialog-actions>
+  <app-btn-secondary (click)="imprimirComprobante()" buttonText="Imprimir Comprobante"></app-btn-secondary>
+  <app-btn-primary (click)="finalizarConsulta()" buttonText="Finalizar"></app-btn-primary>
+</mat-dialog-actions>
+</div>
+
