--- a/front/src/app/shared/components/main-layout/main-layout.component.scss
+++ b/front/src/app/shared/components/main-layout/main-layout.component.scss
@@ -26,6 +26,11 @@ a{
     color: white;
     font-weight: 500;
     text-decoration: none;
+    cursor: pointer;
+}
+
+a:last-child{
+    padding-top: 100px;
 }
 
 .main-content{
