--- a/front/src/app/shared/components/ingresar-dni-paciente/ingresar-dni-paciente.component.html
+++ b/front/src/app/shared/components/ingresar-dni-paciente/ingresar-dni-paciente.component.html
@@ -1,36 +1,33 @@
-
-<!-- Cabecera hardcodeada -->
 <div class="mainContainer">
     <h2> Solicitud de Turno</h2>
-<h2>Miércoles 22 de mayo, 15hs. Dr. González</h2>
-<p>Ingrese DNI del paciente:</p>
-<div class="inputContainer">
-    <mat-form-field appearance="outline">
-        <mat-label>DNI</mat-label>
-        <input matInput [formControl]="dniFormControl">
-        @if (dniFormControl.hasError('pattern') && !dniFormControl.hasError('required')) {
-            <mat-error>Por favor, ingrese un DNI válido (sin puntos)</mat-error>
-        }
+    <h2>{{ turnoSeleccionado?.especialidad }} {{ turnoSeleccionado?.inicioFechaHora | date: 'M/d/yy, h:mm a' }}</h2>
+    <h2>Profesional: {{ turnoSeleccionado?.profesional?.persona?.apellido }}, {{
+        turnoSeleccionado?.profesional?.persona?.nombre }}</h2>
+
+    <p>Ingrese DNI del paciente:</p>
     
-        @if (dniFormControl.hasError('required')) {
+    <div class="inputContainer">
+        <mat-form-field appearance="outline">
+            <mat-label>DNI</mat-label>
+            <input matInput [formControl]="dniFormControl">
+            @if (dniFormControl.hasError('pattern') && !dniFormControl.hasError('required')) {
             <mat-error>Por favor, ingrese un DNI</mat-error>
+            }
+            @if (dniFormControl.hasError('required')) {
+            <mat-error>Por favor, ingrese un DNI</mat-error>
+            }
+        </mat-form-field>
+    </div>
+    
+    <div class="btnContainer">
+        <app-btn-secondary (click)="volver()" buttonText="Volver"></app-btn-secondary>
+        @if (dniFormControl.hasError('required')) {
+            <app-btn-inactive buttonText="Buscar paciente"></app-btn-inactive>
+        } @else {    
+            @if (dniFormControl.value) {
+                <app-btn-primary (click)="getPersonByDniYNavegar(dniFormControl.value)" buttonText="Buscar paciente"></app-btn-primary>
+            }
         }
-        
-    </mat-form-field>
+    </div>
+    <router-outlet></router-outlet>
 </div>
-
-<div class="btnContainer">
-    <app-btn-secondary (click)="volver()" buttonText="Volver"></app-btn-secondary>
-    @if (dniFormControl.hasError('pattern') || dniFormControl.hasError('required')) {
-        <app-btn-inactive buttonText="Buscar paciente"></app-btn-inactive>
-    } @else {
-
-        @if (dniFormControl.value) {
-            <!-- Para probar que el paciente no existe, si se ingresa 1 como DNI se pasa a ese recorrido -->
-            <app-btn-primary (click)="getPersonByDni(dniFormControl.value)" buttonText="Buscar paciente"></app-btn-primary>
-        }
-    }
-</div>
-<router-outlet></router-outlet>
-</div>
-
