--- a/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.scss
+++ b/front/src/app/shared/components/seleccionar-turno/seleccionar-turno.component.scss
@@ -43,3 +43,13 @@ h3:last-of-type{
 .custom-radio .mat-radio-inner-circle {
   background-color: #4caf50; /* Color del círculo interno cuando está seleccionado */
 }
+
+.ocupado {
+    color: red;
+    font-weight: bold;
+  }
+  
+  .sobreturno {
+    font-weight: bold;
+  }
+  
