--- a/front/src/app/shared/components/confirmar-turno/confirmar-turno.component.html
+++ b/front/src/app/shared/components/confirmar-turno/confirmar-turno.component.html
@@ -1,9 +1,10 @@
 <div class="card">
     <h2>Confirmar Turno</h2>
-    <h4>Paciente: {{ pacienteSeleccionado?.persona?.nombre }} {{ pacienteSeleccionado?.persona?.apellido }}</h4>
+    
     <h4>Turno: {{ turnoSeleccionado?.inicioFechaHora | date: 'd/M/yy, h:mm a' }}</h4>
-    <h4>Especialidad: {{ turnoSeleccionado?.especialidad }}</h4>
-    <h4>Profesional: {{ turnoSeleccionado?.profesional?.persona?.apellido}}, {{ turnoSeleccionado?.profesional?.persona?.nombre}}</h4>
+    <h4>Especialidad: {{ turnoSeleccionado?.especialidad }}</h4><br>
+    <h4>Profesional: {{ turnoSeleccionado?.profesional?.persona?.apellido}}, {{ turnoSeleccionado?.profesional?.persona?.nombre}}</h4><br>
+    <h4>Paciente: {{ pacienteSeleccionado?.persona?.nombre }} {{ pacienteSeleccionado?.persona?.apellido }}</h4>
     <div class="dataContainer">
       <p>DNI: {{ pacienteSeleccionado?.persona?.dni }}</p>
       <p>Dirección: {{ pacienteSeleccionado?.persona?.domicilio }}</p>
